# fastapi-starter

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
src/app/: cli.py  main.py
src/app/api/: deps.py
src/app/api/routes/v1/: auth.py  hello.py  items.py
src/app/core/: config.py  logging.py  security.py
src/app/models/: schemas.py
tests/: conftest.py  test_auth.py  test_health.py  test_hello.py  test_items.py
